// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip/> renders component with default props 1`] = `
<div
  className="mfui-tooltip mfui-tooltip_paddings_medium"
  style={
    Object {
      "left": "0",
      "position": "absolute",
      "top": "0",
    }
  }
>
  <div
    className="mfui-tooltip__arrow"
  />
  <div
    className="mfui-tooltip__arrow-shadow"
  />
  <Tile
    className="mfui-tooltip__content"
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
  >
    Some test content
  </Tile>
  <Tile
    className="mfui-tooltip__content-shadow"
    shadowLevel="default"
  />
</div>
`;

exports[`<Tooltip/> renders with props 1`] = `
<div
  className="mfui-tooltip mfui-tooltip_paddings_none className rootClass"
  data-root="test"
  style={
    Object {
      "left": "0",
      "position": "absolute",
      "top": "0",
    }
  }
>
  <div
    className="mfui-tooltip__arrow arrow"
  />
  <div
    className="mfui-tooltip__arrow-shadow"
  />
  <Tile
    className="mfui-tooltip__content content"
    dataAttrs={
      Object {
        "root": Object {
          "data-content": "test",
          "incorrect-attr": "test",
        },
      }
    }
  />
  <Tile
    className="mfui-tooltip__content-shadow content-shadow"
    shadowLevel="default"
  />
</div>
`;
